; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_mp_archive_close.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_mp_archive_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_archive = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_archive*)* @mp_archive_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mp_archive_close(%struct.mp_archive* %0) #0 {
  %2 = alloca %struct.mp_archive*, align 8
  store %struct.mp_archive* %0, %struct.mp_archive** %2, align 8
  %3 = load %struct.mp_archive*, %struct.mp_archive** %2, align 8
  %4 = icmp ne %struct.mp_archive* %3, null
  br i1 %4, label %5, label %21

5:                                                ; preds = %1
  %6 = load %struct.mp_archive*, %struct.mp_archive** %2, align 8
  %7 = getelementptr inbounds %struct.mp_archive, %struct.mp_archive* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %21

10:                                               ; preds = %5
  %11 = load %struct.mp_archive*, %struct.mp_archive** %2, align 8
  %12 = getelementptr inbounds %struct.mp_archive, %struct.mp_archive* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @archive_read_close(i32* %13)
  %15 = load %struct.mp_archive*, %struct.mp_archive** %2, align 8
  %16 = getelementptr inbounds %struct.mp_archive, %struct.mp_archive* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @archive_read_free(i32* %17)
  %19 = load %struct.mp_archive*, %struct.mp_archive** %2, align 8
  %20 = getelementptr inbounds %struct.mp_archive, %struct.mp_archive* %19, i32 0, i32 0
  store i32* null, i32** %20, align 8
  br label %21

21:                                               ; preds = %10, %5, %1
  ret void
}

declare dso_local i32 @archive_read_close(i32*) #1

declare dso_local i32 @archive_read_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
